<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.signup.SignUpActivity">
    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:id="@+id/customToolbar"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey_f8">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/dp_20"
            android:paddingTop="@dimen/dp_8"
            android:visibility="gone"
            android:paddingEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_8"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:alpha="0.5"
            android:enabled="false"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="end"
            android:letterSpacing="0.05"
            android:paddingTop="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/next_txt"
            android:textColor="@color/grey_4a"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>
    <ScrollView
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/customToolbar">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            tools:context=".features.signup.SignUpActivity">



            <ImageView

                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@mipmap/ic_enter_mobile_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_26"
                android:fontFamily="@font/montserrat"
                android:gravity="center_horizontal"
                android:text="@string/enter_your_mobile_number"
                android:textColor="@color/grey_9b"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_horizontal"
                android:text="@string/send_confirmation_code_txt"
                android:textColor="@color/grey_4a"
                android:textSize="@dimen/sp_10" />

            <com.example.mitm.common.views.PrefixEditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_52"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/underline_edit_txt"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="number"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:tag="@string/country_code_ind"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                tools:text="9176575088" />


        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        android:orientation="horizontal"
       >

        <CheckBox
            android:id="@+id/accept_terms_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="visible" />

        <TextView
            android:id="@+id/termsOfUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:gravity="start"
            android:linksClickable="true"
            android:paddingStart="@dimen/dp_8"
            android:text="@string/agree_terms_privacy"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>
</RelativeLayout>