<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout

            android:id="@+id/customToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/grey_f8">

        <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingStart="@dimen/dp_20"
                android:paddingTop="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_8"
                android:src="@mipmap/ic_back"
                android:visibility="visible"/>

        <TextView
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:alpha="0.5"
                android:enabled="false"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="end"
                android:letterSpacing="0.05"
                android:paddingTop="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_8"
                android:text="@string/next_txt"
                android:textColor="@color/grey_4a"
                android:textSize="@dimen/sp_14"/>
    </RelativeLayout>

    <ScrollView
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/footer"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_below="@+id/customToolbar">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/otp_container"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="83dp"
                    android:layout_height="83dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_26"
                    android:layout_marginBottom="25dp"
                    android:src="@mipmap/ic_otp_img"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="92dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Enter OTP sent to your mobile"
                    android:textColor="@color/grey_9b"
                    android:textSize="@dimen/sp_16"/>


            <com.example.mitm.common.views.PinEntryEditText
                    android:id="@+id/edt_txt_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_48"
                    android:cursorVisible="false"
                    android:digits="123456 7890"
                    android:ems="10"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/sp_16"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/footer"
            android:paddingTop="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_40"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:textColor="@color/resend_txt_color"
                android:textSize="16sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="the OTP in"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/countdown_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/default_timer_value"
                android:textColor="@color/black"
                android:textSize="16sp"/>

    </LinearLayout>
</RelativeLayout>