<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            tools:context=".features.meetings.meetingdetail.MeetingDetailActivity">

        <RelativeLayout
                android:paddingTop="28dp"
                android:paddingBottom="28dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/ic_back"
                    android:id="@+id/back_btn"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/back_btn"
                    android:textSize="18sp"
                    android:id="@+id/meetingTitle"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black"
                    android:text="AJAY’S BIRTHDAY"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/meetingTitle"
                    android:gravity="center_horizontal"
                    android:id="@+id/meeting_time_container"
                    android:layout_marginTop="20dp">
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_below="@id/meetingTitle"
                        android:id="@+id/meeting_date"
                        android:padding="8dp"
                        android:background="@drawable/meeting_date_border"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:src="@drawable/ic_calendar_6"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:textSize="12sp"
                            android:id="@+id/meetingDateTv"
                            android:textColor="@color/grey_4a"
                            android:text="This Fri, 28 Dec"
                    />
                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/meeting_date"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/meeting_time_border"
                        android:padding="8dp">

                    <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:src="@drawable/ic_clock_2"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:id="@+id/meetingTimeTv"
                            android:layout_marginLeft="8dp"
                            android:textColor="@color/grey_4a"
                            android:text="12.00 PM"
                    />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/meeting_time_container">

                <Button
                        android:layout_width="111dp"
                        android:layout_height="34dp"
                        android:background="@drawable/decline_btn_border"
                        android:text="@string/decline"
                        android:id="@+id/declineMeetingBtn"
                        android:textColor="@color/red"/>
                <Button
                        android:layout_width="111dp"
                        android:layout_height="34dp"
                        android:background="@drawable/accept_btn_border"
                        android:text="@string/join"
                        android:layout_marginLeft="26dp"
                        android:id="@+id/acceptMeetingBtn"
                        android:textColor="@color/skyblue"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/grey_95"
                android:text="@string/description"
        />
        <View android:layout_width="match_parent"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginTop="4dp"
              android:background="#a4a4a4"
              android:layout_height="1dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="12sp"
                android:id="@+id/meetingDescTv"
                android:layout_marginTop="14dp"
                android:textColor="@color/black"
                android:text="Ajay’s 25th birthday suprise party."
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/meetingCreatorIv"
                    android:src="@drawable/ic_android_black_24dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:id="@+id/meetingCreatorTv"
                    android:layout_marginLeft="12dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="#9b9b9b"
                    android:text="Created by Pradeep"
            />

        </LinearLayout>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#959595"
                android:text="@string/people_invited"/>

        <View android:layout_width="match_parent"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginTop="4dp"
              android:background="#a4a4a4"
              android:layout_height="1dp"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:id="@+id/invited_contacts"
                tools:listitem="@layout/invited_contact_item">
        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

</ScrollView>